rspec-tools/tests/resources/invalid-rules/S200/javascript/rule.adoc
== Why is this an issue?
== How to fix it in Razor
== How to fix it in Razor


